@@ -1,4 +1,6 @@
 Changes towards version 0.7:
+- Do not match singular stars when given a prefix in star search
+  (bug #1071) - Alex
 - Preserve character case when editing with joystick (bug #1080) - Alex
 - Fixed misaligned cargo count (bug #1092) - Coredev
 - Fixed the network SuperMelee team configuration protocol - SvdB
